# mmapck-ci-server

./: autoheader.yml  meson.build
debian/: changelog  control  copyright  mmpack-ci-server.default  mmpack-ci-server.postinst  mmpack-ci-server.postrm  mmpack-ci-server.service  rules
doc/examples/: config.yaml
src/: builder.py  buildjob.py  buildrequest.py  common.py  eventsrc.py  eventsrc_gerrit.py  jobscheduler.py  main.py.in  repository.py
